# ring

./: .gitignore  CMakeLists.txt  README.md
include/: renderer.h
shaders/: default.fs  default.vs
src/: display.c  display.h  main.c  mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h
